
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-07-04 DP  1.6.0  Make elements of the main windows dockable for 
                      maximum configurability.
2006-07-04 DP  1.6.0  Add 'scratch pads' to the Edit Grid and Query Tool
                      windows to use when copying and pasting data back
                      and forth.
2006-07-04 DP  1.6.0  Add a proper menu to the Edit Grid window.
2006-06-30 DP  1.4.3  Return the script return value when executing shell
                      scripts from pgAgent, per Eric Shuman
2006-06-22 DP  1.4.3  Use a slider instead of a spin control to avoid a
                      wxGTK bug on the status form, per Peter Eisentraut.
2006-06-15 DP  1.6.0  Add a new Find & Replace dialogue to the query tool,
                      implementing all the normal Find & Replace options as
                      well as a powerful regular expression search mode.
2006-06-15 DP  1.6.0  Add a pgAgent option to log to a file on *nix [Jeremy
                      Palmer]
2006-06-14 DP  1.6.0  Add a Redhat init script for pgAgent [Jeremy Palmer]
2006-06-13 DP  1.6.0  Display non-default op classes in index definitions.
2006-06-12 DP  1.6.0  Minor fixes to the browser code to properly add new nodes
2006-06-12 DP  1.6.0  Fix creation of jobs with multiple steps or schedules per
                      Jeremy Palmer
2006-06-12 DP  1.6.0  Remove unused fc1 packaging files
2006-05-31 DP  1.6.0  Retain values in the edit grid following a failed
                      insert or update per Mario Splivalo. Don't silently lose
                      changes if the user refreshes the data or closes the 
                      window.