@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-07-17 DP  1.4.3  Display interval precision properly, per Walter Haslbeck
 2006-07-04 DP  1.6.0  Make elements of the main windows dockable for 
                       maximum configurability.
 2006-07-04 DP  1.6.0  Add 'scratch pads' to the Edit Grid and Query Tool
